Sat, 19 Jul 2008 22:42:42 -0400 <me@nikosapi.org>
Fix random segfaults when syncing
Closes bug #150 (http://bugs.gpodder.org/show_bug.cgi?id=150)

	* src/gpodder/gui.py: Don't make any gui calls from the sync thread
	* src/gpodder/sync.py: add a post-done signal to trigger the finished
	sync callback
	* src/gpodder/trayicon.py: instantiate __sync_progress during
	GPodderStatusIcon __init__ or else you'll get a traceback when
	transfering single episodes

Sat, 19 Jul 2008 20:57:08 -0400 <me@nikosapi.org>
Disable TreeModel cache for channels (Patch from Justin Forest)
Closes feature-request #145 (http://bugs.gpodder.org/show_bug.cgi?id=145)

	* src/gpodder/gui.py: don't update every channel's treemodel when only
	one really needs to be updated
	* src/gpodder/libpodcasts.py: don't cache channel treemodels anymore
	generate a new one everytime podcastChannel.tree_model is requested

Sat, 19 Jul 2008 20:37:10 -0400 <me@nikosapi.org>
Request covers only when necessary (Patch from Justin Forest)
Closes bug #144 (http://bugs.gpodder.org/show_bug.cgi?id=144)

	* src/gpodder/gui.py: Don't update covers every time updateComboBox
	is called
	* src/gpodder/libpodcasts.py: update cover during an update()
	* src/gpodder/services.py: log when a cover is being requested

Tue, 15 Jul 2008 15:15:42 -0400 <me@nikosapi.org>
Fix Device traceback when syncing (reported by: FriedBunny)

	* src/gpodder/sync.py: forgot to rename _track_on_device() in 
	Device.episode_on_device()

Tue, 15 Jul 2008 10:21:39 +0200 <thp@perli.net>
gPodder 0.12.0 "Metropolis" released

	* bin/gpodder: gPodder 0.12.0 released
	* data/messages.pot: Updated for the 0.12.0 release
	* data/po/de.po: Updated for the 0.12.0 release
	* data/po/*.po: Updated from messages.pot
	* doc/man/gpodder.1: gPodder 0.12.0 released
	* README: gPodder 0.12.0 released, mention pysqlite2 for Py2.4

Tue, 15 Jul 2008 10:08:16 +0200 <thp@perli.net>
Fix bugs and annoyances when no channels.opml file exists
