@@ -1,3 +1,9 @@
+Sun, 20 Jul 2008 10:42:22 +0200 <jerome.chabod@ifrance.com>
+Make episodes selector's columns sortable (bug #146)
+	* src/gpodder/gui.py: make columns sortable Add a index's column to 
+    indentify the currently selected episodes even when sorted. Rewrite 
+    get_selected_coumn() to use this index.
+
 Sat, 19 Jul 2008 22:42:42 -0400 <me@nikosapi.org>
 Fix random segfaults when syncing
 Closes bug #150 (http://bugs.gpodder.org/show_bug.cgi?id=150)
